// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> snapshot - default props 1`] = `
<div
  className="card"
>
  <div
    className="cardInfo"
  >
    <h4>
      Card title
    </h4>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`<Card /> snapshot - handle and default props 1`] = `
<div
  className="card"
>
  <div
    className="handleContainer"
  >
    <i
      className="dragHandle"
    />
  </div>
  <div
    className="cardInfo"
  >
    <h4>
      Card title
    </h4>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`<Card /> snapshot - with content 1`] = `
<div
  className="card"
>
  <div
    className="cardInfo"
  >
    <h4>
      Card title
    </h4>
    <p>
      TEXT
    </p>
  </div>
</div>
`;

exports[`<Card /> snapshot - with handle and content 1`] = `
<div
  className="card"
>
  <div
    className="handleContainer"
  >
    <i
      className="dragHandle"
    />
  </div>
  <div
    className="cardInfo"
  >
    <h4>
      Card title
    </h4>
    <p>
      TEXT
    </p>
  </div>
</div>
`;

exports[`<Card /> snapshot - with handle and title 1`] = `
<div
  className="card"
>
  <div
    className="handleContainer"
  >
    <i
      className="dragHandle"
    />
  </div>
  <div
    className="cardInfo"
  >
    <h4>
      TEXT
    </h4>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`<Card /> snapshot - with handle, title and content 1`] = `
<div
  className="card"
>
  <div
    className="handleContainer"
  >
    <i
      className="dragHandle"
    />
  </div>
  <div
    className="cardInfo"
  >
    <h4>
      TITLE
    </h4>
    <p>
      CONTENT
    </p>
  </div>
</div>
`;

exports[`<Card /> snapshot - with title 1`] = `
<div
  className="card"
>
  <div
    className="cardInfo"
  >
    <h4>
      TEXT
    </h4>
    <p>
      Card content
    </p>
  </div>
</div>
`;

exports[`<Card /> snapshot - with title and content 1`] = `
<div
  className="card"
>
  <div
    className="cardInfo"
  >
    <h4>
      TITLE
    </h4>
    <p>
      CONTENT
    </p>
  </div>
</div>
`;
